--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>React Tic-Tac-Toe</title>
   </head>
   <body>
+    <header>
+      <!-- Images in public folder is always available to the project -->
+      <img src="game-logo.png" alt="game-logo" />
+      <h1>Tic-Tac-Toe</h1>
+    </header>
     <div id="root"></div>
     <script type="module" src="/src/index.jsx"></script>
   </body>
